Register user completed

--- a/src/index.css
+++ b/src/index.css
@@ -322,3 +322,12 @@ ul {
 .Toastify__toast {
   text-transform: capitalize;
 }
+
+/* .bt {
+  height: 4px;
+  width: 100%;
+  background-color: #60a5fa;
+  color: white;
+  padding: 1rem;
+  border-radius: 10px;
+} */
